@@ -317,27 +317,38 @@ A term is either a variable or a functor.
 A functor is an integer, a float, a string, a name, a compound term,
 or a higher-order term.
 
-A compound term is a name followed without any intervening
+A compound term is a simple compound term, an operator term,
+or a parenthesized term.
+
+A simple compound term is a name followed without any intervening
 whitespace by an open parenthesis (i.e. an open_ct token),
 a sequence of argument terms separated by commas, and a close
-parenthesis.  Compound terms may also be specified using
-operator notation, as in Prolog.
+parenthesis.  
 
-Operators can also be formed by enclosing an variable or name between grave
+An operator term is a term specified using operator notation, as in Prolog.
+Operators can also be formed by enclosing a variable or name between grave
 accents (backquotes).  Any variable or name may
 be used as an operator in this way.  If @var{fun} is a variable or name,
 then a term of the form @code{@var{X} `@var{fun}` @var{Y}} is equivalent to 
 @code{@var{fun}(@var{X}, @var{Y})}.  The operator is treated as having the
 highest precedence possible and is left associative.
 
-A higher-order term is a variable followed without any intervening
-whitespace by an open parenthesis (i.e. an open_ct token),
+A parenthesized term is just an open parenthesis
+followed by a term and a close parenthesis.
+
+A higher-order term is a ``closure'' term, which can be any term 
+other than a name or an operator term, followed without
+any intervening whitespace by an open parenthesis (i.e. an open_ct token),
 a sequence of argument terms separated by commas, and a close
-parenthesis.  A higher-order term is equivalent to a compound term
+parenthesis.  A higher-order term is equivalent to a simple compound term
 whose functor is the empty name, and whose arguments are the 
-the variable followed by the arguments of the higher-order term.
-That is, a term such as @code{Var(Arg1, @dots{}, ArgN)} is
-parsed as @code{''(Var, Arg1, @dots{}, ArgN)},
+closure term followed by the argument terms of the higher-order term.
+That is, a term such as @code{Term(Arg1, @dots{}, ArgN)} is
+parsed as @code{''(Term, Arg1, @dots{}, ArgN)}.
+Note that the closure term can be a parenthesized
+term; for example, @code{(Term^FieldName)(Arg1, Arg2)}
+is a higher-order term, and so it gets parsed as
+if it were @code{''((Term^FieldName), Arg1, Arg2)}.
 
 @node Items
 @section Items
